fix: z-index for board-mask and update for letUserDraw button on userListActions

--- a/src/components/molecules/FuCooperateBoard/cooperateBoard.scss
+++ b/src/components/molecules/FuCooperateBoard/cooperateBoard.scss
@@ -16,7 +16,7 @@
     left: 0;
     position: absolute;
     width: 1000px;
-    z-index: 10;
+    z-index: 3;
   }
 
   &__toolbar {
